fixed visibility issue with ending screen

--- a/src/css/fullscreen.css
+++ b/src/css/fullscreen.css
@@ -1,5 +1,6 @@
 .fullscreen__invisible{
     opacity: 0;
+    visibility:hidden;
 }
 
 .fullscreen{
